# Telecom-rag

./: .gitignore  EXERCISE_add_plans_source.txt  app.py  chain.py  embeddings.py  generate_guide_pdf.py  ingest_faq.py  ingest_guides.py  ingest_plans.py  ingest_tickets.py  main.py  pyproject.toml  retriever.py  seed_tickets.py  vectorstore.py
