[project]
name = "telecom-rag"
version = "0.1.0"
description = "RAG Telecom Customer Care Chatbot"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-groq>=0.3",
    "langchain-chroma>=0.2",
    "langchain-huggingface>=0.1",
    "chromadb>=1.0",
    "sentence-transformers>=3.0",
    "python-dotenv>=1.0",
    "streamlit>=1.40",
    "pypdf>=5.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"
